# gmock-sed

./: Cargo.toml  README.md
src/: app.rs  errors.rs  extract.rs  lib.rs  main.rs  regexes.rs  replace.rs  search.rs  util.rs
tests/: cook_book.rs  multiline.rs  nested.rs  override_qualifier.rs  unprotected_commas.rs  void_args.rs  whitespace.rs
tests/common/: mod.rs
