[package]
name = "gmock-sed"
version = "0.1.0"
authors = ["Hamish Miller <hamishcomiller@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
lazy_static = "1.4.0"
rayon = "1.4.1"
regex = "1.3.9"
structopt = "0.3.19"
walkdir = "2.3.1"

[dev-dependencies]
assert_cmd = "1.0.1"
tempfile = "3.1.0"
